--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -3,8 +3,9 @@ WORKDIR "/application"
 
 RUN apt-get update; \
     apt-get -y --no-install-recommends install \
-        php8.2-mysql \ 
-        php8.2-redis \ 
+        php8.2-mysql \
+        php8.2-redis \
+        php8.2-sqlite \
         php8.2-swoole; \
     apt-get clean; \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
