--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,16 @@
     "require": {
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.5",
+        "filament/forms": "^2.0",
+        "filament/notifications": "^2.0",
+        "filament/tables": "^2.0",
         "giggsey/libphonenumber-for-php": "^8.13",
         "guzzlehttp/guzzle": "^7.2",
         "lambdish/phunctional": "^2.1",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^2.12",
         "symfony/messenger": "^6.2"
     },
     "require-dev": {
