--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "@alpinejs/focus": "^3.10.3",
+        "@awcodes/alpine-floating-ui": "^3.5.0",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.4",
+        "alpinejs": "^3.12.0",
+        "autoprefixer": "^10.4.7",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
-    }
+    },
+    "dependencies": []
 }
